Fix dark mode flashing after swapping from light mode

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,11 @@ body,
 #root {
   min-height: 100%;
 }
+
+html {
+  background-color: #f1f5f9;
+}
+
+html.dark {
+  background-color: #020617;
+}
